[tool.poetry]
name = "automation-demo"
version = "0.1.0"
description = ""
authors = ["Max Voitko <max.voitko@gmail.com>"]

[tool.poetry.dependencies]
python = "3.7"
pytest = "^3.10"
selenium = "^3.141"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
